# echoflow

./: .gitignore  techspecs.md
alm/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
alm/migrations/: 20240101000001_initial_schema.sql  20240101000002_default_categories.sql
alm/src/: lib.rs  main.rs
alm/src/api/: accounts.rs  analytics.rs  auth.rs  budgets.rs  categories.rs  mod.rs  transactions.rs
alm/src/db/: mod.rs  models.rs
alm/src/plaid/: client.rs  mod.rs
alm/src/utils/: auth.rs  mod.rs
alm/tests/: account_tests.rs  analytics_tests.rs  auth_tests.rs  budget_tests.rs  category_tests.rs  transaction_tests.rs
alm/tests/common/: mod.rs
